Name:                ui-command
Version:             0.1.0
License:             BSD3
Author:              Conrad Parker
Synopsis:            Framework for making friendly commandline programs
Build-Type:          Simple
Cabal-Version:       >= 1.2

------------------------------------------------------------
library
    Build-Depends:   base, time, old-locale, data-default
    Exposed-modules: UI.Command
    Other-modules:   UI.Command.Render

------------------------------------------------------------
-- hello example
--

Executable hello
    Main-Is:         hello.hs
    Hs-Source-Dirs:  ., examples
